--- a/Task 1/Index.html
+++ b/Task 1/Index.html
@@ -18,7 +18,7 @@
         <h1 class="headline">Weight Converter</h1>
         <!-- Users input -->
         <form>
-          <input type="text" id="search" placeholder="Enter kilograms..." />
+          <input type="number" step="0.001" id="search" placeholder="Enter kilograms..." required oninput="createConvertedList(inputEl.value)" " />
           <input type="submit" id="submit-btn" value="Calculate" />
         </form>
         <!-- Place for output after form submission -->
