task 2 reset button added

--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -18,6 +18,7 @@
         <div class="btn">
           <div id="btn__element">CLICK ME</div>
           <div id="btn__state">0</div>
+          <button class="reset">Reset counter</button>
         </div>
       </div>
     </main>
